<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addTasksConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8E7B7"
    tools:context=".AddTasksActivity">

    <!-- Header TextView -->

    <TextView
        android:id="@+id/createTasksTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/create_tasks"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskTitleTextView"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="188dp"
        android:text="@string/task_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createTasksTextView" />

    <EditText
        android:id="@+id/taskTitleEditView"
        android:layout_width="161dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:hint="@string/task_title_hint"
        android:padding="16dp"
        app:layout_constraintStart_toEndOf="@id/taskTitleTextView"
        app:layout_constraintTop_toBottomOf="@id/createTasksTextView" />

    <TextView
        android:id="@+id/taskDescriptionTextView"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="188dp"
        android:text="@string/task_description"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskTitleTextView" />

    <EditText
        android:id="@+id/taskDescriptionEditView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:hint="@string/task_description_hint"
        android:padding="16dp"
        app:layout_constraintStart_toEndOf="@id/taskDescriptionTextView"
        app:layout_constraintTop_toBottomOf="@id/taskTitleTextView" />

    <TextView
        android:id="@+id/dueDateTextView"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="188dp"
        android:text="@string/due_date"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskDescriptionEditView" />

    <EditText
        android:id="@+id/dueDateEditTextDate"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/enter_due_date_here1"
        android:inputType="date"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toEndOf="@id/dueDateTextView"
        app:layout_constraintTop_toBottomOf="@id/taskDescriptionEditView" />

    <Button
        android:id="@+id/createTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/create_task_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dueDateTextView" />

    <Button
        android:id="@+id/backToMainActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        app:layout_constraintTop_toBottomOf="@id/createTaskButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!--<com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" /> -->


</androidx.constraintlayout.widget.ConstraintLayout>