<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@android:color/white"
tools:context=".MainActivity">

<!-- Main content -->
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8E7B7">


    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:paddingTop="10dp"
        android:text="@string/my_task_manager"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewTasksButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_my_tasks"
        app:layout_constraintTop_toBottomOf="@id/headerTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="60dp"/>

    <!-- Button 2 -->
    <Button
        android:id="@+id/addTasksButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_new_task"
        app:layout_constraintTop_toBottomOf="@id/viewTasksButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"/>

    <!-- Button 3 -->
    <Button
        android:id="@+id/editTasksButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_tasks"
        app:layout_constraintTop_toBottomOf="@id/addTasksButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"/>

    <!-- Bottom navigation bar -->
    <!--<com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        app:itemTextAppearance="@style/Widget.MaterialComponents.BottomNavigationView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
        -->

</androidx.constraintlayout.widget.ConstraintLayout>

<!-- Navigation drawer -->
<LinearLayout
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:orientation="vertical"
    android:background="@android:color/white">


    <include layout="@layout/navigation_drawer"/>

</LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>


